Commit add args check